--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="location"><font fgcolor='#8B0000'>*</font>Location</string>
     <string name="details"><font fgcolor='#8B0000'>*</font>Details</string>
     <string name="info">Fields marked with <font fgcolor='#8B0000'>*</font> are not required.</string>
+
+
+    <string-array name="times_array">
+        <item>24 Hours</item>
+        <item>3 Days</item>
+        <item>1 Week</item>
+        <item>2 Weeks</item>
+        <item>1 Month</item>
+        <item>3 Months</item>
+        <item>1 Year</item>
+    </string-array>
 </resources>
