--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="date"><font fgcolor='#8B0000'></font> Date</string>
     <string name="location"><font fgcolor='#8B0000'></font> Location</string>
     <string name="details"><font fgcolor='#8B0000'></font> Details</string>
-    <string name="info">Fields marked with <font fgcolor='#8B0000'>*</font> are required.</string>
-
+    <string name="info">Fields marked with <font fgcolor='#8B0000'>*</font> are required.\n\nYou may enter negative numbers, acting as a debit entry rather than a credit entry.</string>
+    <string name="about">This app was developed by Chris Marcok in July-Aug 2018. It was developed with Android Studio
+        using the Java language.
+    </string>
 
     <string-array name="times_array">
         <item>24 Hours</item>
