--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="about">This app was developed by Chris Marcok in July-Aug 2018. It was developed with Android Studio
         using the Java language.
     </string>
+    <string name="version">App Version 0.0</string>
 
     <string-array name="times_array">
         <item>24 Hours</item>
