--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
         <item>1 Month</item>
         <item>3 Months</item>
         <item>1 Year</item>
+        <item>15 Seconds</item>>
     </string-array>
 </resources>
