--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
         <item>1 Year</item>
         <item>15 Seconds</item>>
     </string-array>
+    <string name="title_activity_tag_detail">TagDetailActivity</string>
 </resources>
