--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="details"><font fgcolor='#8B0000'></font> Details</string>
     <string name="info">Fields marked with <font fgcolor='#8B0000'>*</font> are required.\n\nYou may enter negative numbers in amount field, which will act as a debit entry rather than a credit entry.\n\nThe default date is now.\n\nThe default tag is \"No Tag\". Please create
     tags in the \"Tags\" activity before using them to create a new entry.</string>
-    <string name="about">This app was developed by Chris Marcok in July-Aug 2018. It was developed with Android Studio
-        using the Java language.
+    <string name="about">This app was developed by Chris Marcok in July-Aug 2018. It was developed with Android Studio.
+        It\'s been tested on: Pixel, Pixel2XL, OnePlus 5, S7 Edge, S8, Nexus 5, and Nexus 4.
     </string>
     <string name="version">App Version 1.0</string>
     <string name="title"><font fgcolor='#8B0000'>*</font>Title</string>
